# Cybrelink

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
lib/bungle/: Bungle.vcxproj  Bungle.vcxproj.filters  CMakeLists.txt  vcpkg.json
lib/bungle/src/: bungle.cpp  bungle.h
lib/eclipse/: CMakeLists.txt  Eclipse.vcxproj  Eclipse.vcxproj.filters  button.cpp  button.h  eclipse.cpp  vcpkg.json
lib/eclipse/src/: animation.cpp  animation.h  button.cpp  button.h  eclipse.cpp  eclipse.h
lib/ftgl/: CMakeLists.txt
lib/ftgl/include/FTGL/: FTBBox.h  FTBitmapGlyph.h  FTCharToGlyphIndexMap.h  FTCharmap.h  FTContour.h  FTExtrdGlyph.h  FTFace.h  FTFont.h  FTGL.h  FTGLBitmapFont.h  FTGLExtrdFont.h  FTGLOutlineFont.h  FTGLPixmapFont.h  FTGLPolygonFont.h  FTGLTextureFont.h  FTGlyph.h  FTGlyphContainer.h  FTLibrary.h  FTList.h  FTOutlineGlyph.h  FTPixmapGlyph.h  FTPoint.h  FTPolyGlyph.h  FTSize.h  FTTextureGlyph.h  FTVector.h  FTVectoriser.h
lib/ftgl/src/: FTBitmapGlyph.cpp  FTCharmap.cpp  FTContour.cpp  FTExtrdGlyph.cpp  FTFace.cpp  FTFont.cpp  FTGLBitmapFont.cpp  FTGLExtrdFont.cpp  FTGLOutlineFont.cpp  FTGLPixmapFont.cpp  FTGLPolygonFont.cpp  FTGLTextureFont.cpp  FTGlyph.cpp  FTGlyphContainer.cpp  FTLibrary.cpp  FTOutlineGlyph.cpp  FTPixmapGlyph.cpp  FTPoint.cpp  FTPolyGlyph.cpp  FTSize.cpp  FTTextureGlyph.cpp  FTVectoriser.cpp
lib/gucci/: CMakeLists.txt  Gucci.vcxproj  Gucci.vcxproj.filters  draw.cpp  draw.h  geom_types.h  gucci.cpp  gucci.h  gucci_glut.cpp  gucci_sdl.cpp  gucci_sdl2.cpp  image.cpp  image.h  makefile  resize_unix.cpp  resize_win32.cpp  vcpkg.json  vertex_buffer_pool.cpp  vertex_buffer_pool.h
lib/gucci/data/: text_basic_frag.txt  text_basic_vert.txt  text_lcd_frag.txt  text_lcd_vert.txt  text_sdf_frag.txt
lib/gucci/src/: draw.cpp  geom_types.cpp  geom_types.h  gucci.cpp  gucci.h  gucci_glut.cpp  gucci_internal.h  gucci_sdl.cpp  gucci_sdl2.cpp  image.cpp  image.h  resize_unix.cpp  resize_win32.cpp  vertex_buffer_pool.cpp  vertex_buffer_pool.h
lib/irclib/: CMakeLists.txt  IRCLib.vcproj  IRCLib.vcxproj  IRCLib.vcxproj.filters
lib/irclib/src/: CrossThreadsMessagingDevice.cpp  CrossThreadsMessagingDevice.h  irc.cpp  irc.h  socket.cpp  socket.h  test.cpp
lib/irclib/src/linux/: missing.cpp  missing.h  windows.cpp  windows.h  winsock.cpp  winsock.h
lib/redshirt/: CMakeLists.txt  Redshirt.vcxproj  Redshirt.vcxproj.filters  vcpkg.json
lib/redshirt/src/: handle.cpp  handle.h  hash.cpp  hash.h  membuf.cpp  membuf.h  redshirt.cpp  redshirt.h  sha1.hpp  vfs.cpp  vfs.h
lib/soundgarden/: CMakeLists.txt  Soundgarden.vcxproj  Soundgarden.vcxproj.filters  soundgarden_sdl2mixer.cpp  soundgarden_win32.cpp  vcpkg.json
lib/soundgarden/src/: sgplaylist.cpp  sgplaylist.h  soundgarden.cpp  soundgarden.h  soundgarden_sdl2mixer.cpp  soundgarden_sdlmixer.cpp  soundgarden_unix.cpp  soundgarden_win32.cpp
lib/vanbakel/: CMakeLists.txt  Vanbakel.vcxproj  Vanbakel.vcxproj.filters  interface.cpp  vcpkg.json
lib/vanbakel/src/: interface.cpp  interface.h  task.cpp  task.h  taskwrapper.cpp  taskwrapper.h  vanbakel.cpp  vanbakel.h
uplink/: CMakeLists.txt
uplink/src/: ExceptionHandler.cpp  ExceptionHandler.h  GetWinVer.cpp  GetWinVer.h  Makefile  MiniVersion.cpp  MiniVersion.h  Uplink.sln  Uplink.vcxproj  Uplink.vcxproj.filters  best_path.cpp  best_path.h  gl.h  resource.h  stdafx.h  uplink.cpp  vcpkg.json  version.cpp
uplink/src/app/: app.cpp  app.h  binreloc.cpp  binreloc.h  decode.c  dos2unix.cpp  dos2unix.h  globals.h  globals_defines.h  miscutils.cpp  miscutils.h  opengl.cpp  opengl.h  opengl_interface.cpp  opengl_interface.h  probability.cpp  probability.h  resizex.cpp  serialise.cpp  serialise.h  uplinkobject.cpp  uplinkobject.h
uplink/src/game/: game.cpp  game.h  gameobituary.cpp  gameobituary.h  scriptlibrary.cpp  scriptlibrary.h
uplink/src/game/data/: data.cpp  data.h
uplink/src/interface/: interface.cpp  interface.h  interfacescreen.cpp  interfacescreen.h  scrollbox.cpp  scrollbox.h
uplink/src/interface/localinterface/: analyser_interface.cpp  analyser_interface.h  cheat_interface.cpp  cheat_interface.h  email_interface.cpp  email_interface.h  evtqueue_interface.cpp  evtqueue_interface.h  finance_interface.cpp  finance_interface.h  gateway_interface.cpp  gateway_interface.h  hud_interface.cpp  hud_interface.h  hw_interface.cpp  hw_interface.h  irc_interface.cpp  irc_interface.h  keyboardinterface.cpp  keyboardinterface.h  lan_interface.cpp  lan_interface.h  localinterface.cpp  localinterface.h  localinterfacescreen.cpp  localinterfacescreen.h  mail_view_interface.cpp  mail_view_interface.h  phonedialler.cpp  (+13 more)
uplink/src/mainmenu/: closing_interface.cpp  closing_interface.h  connectionlost_interface.cpp  connectionlost_interface.h  demogameover_interface.cpp  demogameover_interface.h  disavowed_interface.cpp  disavowed_interface.h  firsttimeloading_interface.cpp  firsttimeloading_interface.h  genericoptions_interface.cpp  genericoptions_interface.h  graphicoptions_interface.cpp  graphicoptions_interface.h  loading_interface.cpp  loading_interface.h  login_interface.cpp  login_interface.h  mainmenu.cpp  mainmenu.h  mainmenuscreen.cpp  mainmenuscreen.h  networkoptions_interface.cpp  networkoptions_interface.h  obituary_interface.cpp  obituary_interface.h  options_interface.cpp  options_interface.h  revelationlost_interface.cpp  revelationlost_interface.h  revelationwon_interface.cpp  revelationwon_interface.h  theme_interface.cpp  theme_interface.h  theteam_interface.cpp  theteam_interface.h  warezgameover_interface.cpp  warezgameover_interface.h
uplink/src/network/: clientconnection.cpp  clientconnection.h  network.cpp  network.h  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h
uplink/src/options/: options.cpp  options.h
uplink/src/util/: singleton.h
uplink/src/view/: fps.cpp  fps.h  view.cpp  view.h
uplink/src/world/: agent.cpp  agent.h  connection.cpp  connection.h  date.cpp  date.h  message.cpp  message.h  person.cpp  person.h  player.cpp  player.h  rating.cpp  rating.h  vlocation.cpp  vlocation.h  world.cpp  world.h
(+435 files in other folders)
